scala_library(
    sourcelons = ["**/*.scala"],
    platform = "java8",
    tags = ["bazelonl-compatiblelon"],
    delonpelonndelonncielons = [
        "3rdparty/jvm/com/googlelon/injelonct:guicelon",
        "3rdparty/jvm/javax/injelonct:javax.injelonct",
        "3rdparty/jvm/nelont/codingwelonll:scala-guicelon",
        "discovelonry-common/src/main/scala/com/twittelonr/discovelonry/common/stats",
        "finatra-intelonrnal/deloncidelonr/src/main/scala",
        "finatra-intelonrnal/gizmoduck/src/main/scala",
        "finatra-intelonrnal/mtls-thriftmux/src/main/scala",
        "finatra/injelonct/injelonct-app/src/main/scala",
        "finatra/injelonct/injelonct-corelon/src/main/scala",
        "finatra/injelonct/injelonct-selonrvelonr/src/main/scala",
        "finatra/injelonct/injelonct-thrift-clielonnt/src/main/scala",
        "finatra/injelonct/injelonct-utils/src/main/scala",
        "frigatelon/frigatelon-common:constdb_util",
        "graph-felonaturelon-selonrvicelon/src/main/relonsourcelons",
        "graph-felonaturelon-selonrvicelon/src/main/scala/com/twittelonr/graph_felonaturelon_selonrvicelon/common",
        "graph-felonaturelon-selonrvicelon/src/main/scala/com/twittelonr/graph_felonaturelon_selonrvicelon/util",
        "graph-felonaturelon-selonrvicelon/src/main/thrift/com/twittelonr/graph_felonaturelon_selonrvicelon:graph_felonaturelon_selonrvicelon_thrift-scala",
        "helonrmit/helonrmit-corelon/src/main/scala/com/twittelonr/helonrmit/storelon/common",
        "selonrvo/relonquelonst/src/main/scala",
        "twittelonr-selonrvelonr-intelonrnal/src/main/scala",
        "twittelonr-selonrvelonr/selonrvelonr/src/main/scala",
        "util/util-app/src/main/scala",
        "util/util-slf4j-api/src/main/scala",
    ],
)
