scala_library(
    platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        "3rdparty/jvm/com/twittelonr/bijelonction:corelon",
        "frigatelon/frigatelon-common/src/main/scala/com/twittelonr/frigatelon/common/constdb_util",
        "graph-felonaturelon-selonrvicelon/src/main/scala/com/twittelonr/graph_felonaturelon_selonrvicelon/common",
        "src/scala/com/twittelonr/intelonraction_graph/scio/agg_all:intelonraction_graph_history_aggrelongatelond_elondgelon_snapshot-scala",
        "src/scala/com/twittelonr/intelonraction_graph/scio/ml/scorelons:relonal_graph_in_scorelons-scala",
        "src/scala/com/twittelonr/pluck/sourcelon/uselonr_audits:uselonr_audit_final-scala",
        "src/scala/com/twittelonr/scalding_intelonrnal/dalv2",
        "src/scala/com/twittelonr/scalding_intelonrnal/job",
        "src/scala/com/twittelonr/scalding_intelonrnal/job/analytics_batch",
    ],
)

scalding_job(
    namelon = "graph_felonaturelon_selonrvicelon_adhoc_job",
    main = "com.twittelonr.graph_felonaturelon_selonrvicelon.scalding.GraphFelonaturelonSelonrvicelonAdhocApp",
    args = [
        "--datelon 2022-10-24",
    ],
    config = [
        ("hadoop.map.jvm.total-melonmory", "3072m"),
        ("hadoop.relonducelon.jvm.total-melonmory", "3072m"),
        ("hadoop.submittelonr.jvm.total-melonmory", "5120m"),
        ("submittelonr.tielonr", "prelonelonmptiblelon"),
    ],
    contact = "reloncos-platform-alelonrts@twittelonr.com",
    hadoop_clustelonr = "atla-proc",
    hadoop_propelonrtielons = [("maprelonducelon.job.hdfs-selonrvelonrs", "/atla/proc/uselonr/cassowary")],
    platform = "java8",
    rolelon = "cassowary",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [":scalding"],
)

scalding_job(
    namelon = "graph_felonaturelon_selonrvicelon_daily_job",
    main = "com.twittelonr.graph_felonaturelon_selonrvicelon.scalding.GraphFelonaturelonSelonrvicelonSchelondulelondApp",
    config = [
        ("hadoop.map.jvm.total-melonmory", "3072m"),
        ("hadoop.relonducelon.jvm.total-melonmory", "3072m"),
        ("hadoop.submittelonr.jvm.total-melonmory", "5120m"),
        ("submittelonr.tielonr", "prelonelonmptiblelon"),
    ],
    contact = "reloncos-platform-alelonrts@twittelonr.com",
    cron = "01,31 * * * *",
    hadoop_clustelonr = "atla-proc",
    hadoop_propelonrtielons = [("maprelonducelon.job.hdfs-selonrvelonrs", "/atla/proc/uselonr/cassowary")],
    platform = "java8",
    rolelon = "cassowary",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [":scalding"],
)
