scala_library(
    platform = "java8",
    tags = [
        "bazel-compatible",
        "bazel-only",
    ],
    dependencies = [
        "3rdparty/jvm/com/ExTwitter/bijection:core",
        "frigate/frigate-common/src/main/scala/com/ExTwitter/frigate/common/constdb_util",
        "graph-feature-service/src/main/scala/com/ExTwitter/graph_feature_service/common",
        "src/scala/com/ExTwitter/interaction_graph/scio/agg_all:interaction_graph_history_aggregated_edge_snapshot-scala",
        "src/scala/com/ExTwitter/interaction_graph/scio/ml/scores:real_graph_in_scores-scala",
        "src/scala/com/ExTwitter/pluck/source/user_audits:user_audit_final-scala",
        "src/scala/com/ExTwitter/scalding_internal/dalv2",
        "src/scala/com/ExTwitter/scalding_internal/job",
        "src/scala/com/ExTwitter/scalding_internal/job/analytics_batch",
    ],
)

scalding_job(
    name = "graph_feature_service_adhoc_job",
    main = "com.ExTwitter.graph_feature_service.scalding.GraphFeatureServiceAdhocApp",
    args = [
        "--date 2022-10-24",
    ],
    config = [
        ("hadoop.map.jvm.total-memory", "3072m"),
        ("hadoop.reduce.jvm.total-memory", "3072m"),
        ("hadoop.submitter.jvm.total-memory", "5120m"),
        ("submitter.tier", "preemptible"),
    ],
    contact = "recos-platform-alerts@ExTwitter.com",
    hadoop_cluster = "atla-proc",
    hadoop_properties = [("mapreduce.job.hdfs-servers", "/atla/proc/user/cassowary")],
    platform = "java8",
    role = "cassowary",
    runtime_platform = "java8",
    tags = [
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [":scalding"],
)

scalding_job(
    name = "graph_feature_service_daily_job",
    main = "com.ExTwitter.graph_feature_service.scalding.GraphFeatureServiceScheduledApp",
    config = [
        ("hadoop.map.jvm.total-memory", "3072m"),
        ("hadoop.reduce.jvm.total-memory", "3072m"),
        ("hadoop.submitter.jvm.total-memory", "5120m"),
        ("submitter.tier", "preemptible"),
    ],
    contact = "recos-platform-alerts@ExTwitter.com",
    cron = "01,31 * * * *",
    hadoop_cluster = "atla-proc",
    hadoop_properties = [("mapreduce.job.hdfs-servers", "/atla/proc/user/cassowary")],
    platform = "java8",
    role = "cassowary",
    runtime_platform = "java8",
    tags = [
        "bazel-compatible:migrated",
        "bazel-only",
    ],
    dependencies = [":scalding"],
)
